# QuartierScopeAI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  REDEPLOY.md  SPRINTS.md  docker-compose.yml  prd.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml
app/: api.py  cli.py  config.py  ingest.py  observability.py  orchestrator.py  security.py  streamlit_app.py
app/agents/: actions_agent.py  rag_agent.py  router.py  synthesizer.py  tools_agent.py
app/memory/: checkpointer.py
app/prompts/: router.txt  synthesis.txt
app/tools/: datagouv_mcp.py  dvf.py  hubspot_mcp.py  scoring.py  web_search.py
docs/: architecture.md  deployment.md  index.md  integrations.md  journey.md  overview.md  package.json  sprints.md  stack.md  test-matrix.md
docs/.vitepress/: config.ts
terraform/: bootstrap.sh  main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_memory.py  test_orchestrator.py  test_rag.py  test_security.py  test_smoke_mcp.py  test_synthesizer.py  test_tools.py
