[project]
name = "quartierscope-ai"
version = "0.1.0"
description = "Multi-agent AI copilot for French neighborhood analysis (CGP firms)"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "QuartierScope AI" }]

dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    "langchain-qdrant>=0.2,<0.3",
    "qdrant-client>=1.12,<2.0",
    "mcp>=1.2,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "typer>=0.13,<1.0",
    "rich>=13.9,<14.0",
    "streamlit>=1.40,<2.0",
    "redis>=5.2,<6.0",
    "duckdb>=1.1,<2.0",
    "secure>=1.0,<2.0",
    "slowapi>=0.1.9,<1.0",
    "defusedxml>=0.7,<1.0",
    "httpx>=0.28,<1.0",
    "tavily-python>=0.5,<1.0",
    "langfuse>=2.50,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "pypdf>=5.0,<6.0",
    "pdfplumber>=0.11,<1.0",
    "tiktoken>=0.8,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "C4"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
